# racing-adapter

./: .gitignore  CLAUDE.md  README.md  arduino_config.json  calibration_profile.json  pyproject.toml  servo_control.py
esp32-firmware/: esp32-firmware.ino
esp32-firmware/esp32-diagnostics/: esp32-diagnostics.ino
rc-car-firmware/: DriveData.h  LedLinkedList.h  README.md  push-push  rc-car-firmware.ino
rc-car-firmware/circuitry-diagnostics/: circuitry-diagnostics.ino
src/: button_mapper.py  calibrate.py  cli.py  controller.py  debug_console_controller_view.py  detect_changes.py  f1_to_serial.py  f1_udp_listener.py  hid_listener.py  hid_mapper.py  list_hid_devices.py  live_state.py  ps5_wakeup.py  race_control_panel.py  read_fanatec.py  test_arduino.py  test_telemetry.py
src/f1_AI/: __init__.py  __main__.py  analyzer.py  automation.py  keyboard.py  ps5_actions.py  screenshot.py
src/f1_dispatcher/: __init__.py  dispatcher.py  mqtt.py
src/f1_telemetry/: __init__.py  client.py  packets.py
src/race_control_panel/: __init__.py  button.py  live_display.py  panel.py  race_control_panel.py
