[project]
name = "racing-adapter"
version = "0.1.0"
description = "HID device adapter for racing peripherals"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "hidapi>=0.14.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openai>=1.0.0",
    "pygame>=2.6.1",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyserial>=3.5",
    "python-dotenv>=1.0.0",
    "paho-mqtt>=2.0.0",
]

[project.scripts]
racing-adapter = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_dispatcher", "src/f1_telemetry"]
force-include = {"src/cli.py" = "cli.py"}
